--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,19 +5,24 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="14"
         android:targetSdkVersion="17" />
-<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-<uses-permission android:name="android.permission.SEND_SMS"/>
-<uses-permission 
-        android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+	
+
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme"
-         >
+        android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.test.MainActivity"
             android:label="@string/app_name" >
@@ -27,42 +32,50 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity   android:name="com.example.test.Settings"
-            android:label="@string/app_name">
-            
-            
+        <activity
+            android:name="com.example.test.Settings"
+            android:label="@string/app_name" >
             <intent-filter>
-                
                 <action android:name="android.intent.action.Settings" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.test.Message"
-            android:label="@string/app_name">
+        <activity
+            android:name="com.example.test.Message"
+            android:label="@string/app_name" >
             <intent-filter>
-                
                 <action android:name="android.intent.action.Message" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-            
         </activity>
-        <activity android:name="com.example.test.ListViewDemoActivity"
-            android:label="@string/app_name">
+        <activity
+            android:name="com.example.test.ListViewDemoActivity"
+            android:label="@string/app_name" >
             <intent-filter>
-                
                 <action android:name="android.intent.action.ListViewDemoActivity" />
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+
             <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.example.test.MainActivity" />
-            
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.test.MainActivity" />
         </activity>
-  
+
+        <service android:name="com.example.test.AccidentService" >
+        </service>
+
+        <activity
+            android:name="com.example.test.AccidentWarning"
+            android:label="@string/title_activity_accident_warning" >
+        </activity>
+
+
+    
+
+    <meta-data android:name="com.crashlytics.ApiKey" android:value="1976bbf9800e14c8291d1bbc5e4c00d5545c6a80"/>
     </application>
 
 </manifest>
