Updated code with MVP draft 1
The ListViewDemoActivity class name is re factored by
ListViewContactActivity
Extra class from prototype i.e. Message.java and Settings.java is
deleted

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -51,7 +51,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.test.ListViewDemoActivity"
+            android:name="com.example.test.ListViewContactActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.ListViewDemoActivity" />
