--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -52,13 +52,19 @@
 
         <activity
             android:name="com.CFP.messiah.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:parentActivityName="com.CFP.messiah.MainActivity"
+            >
+            
             <intent-filter>
 
                 <!-- <action android:name="android.intent.action.MAIN" /> -->
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="com.CFP.messiah.MainActivity" />
         </activity>
  
         <activity
@@ -71,6 +77,10 @@
         </activity>
         <activity
             android:name="com.CFP.messiah.MessiahContacts"
+            android:label="@string/app_name" >
+        </activity>
+         <activity
+            android:name="com.CFP.messiah.AccidentWarning"
             android:label="@string/app_name" >
         </activity>
         <activity
