--- a/.classpath
+++ b/.classpath
@@ -2,11 +2,18 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry kind="lib" path="C:/Users/Zahid/Downloads/gcm-76908409d9d5/gcm-client-deprecated/dist/gcm.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Zahid/Downloads/gcm-76908409d9d5/gcm-client-deprecated/dist/gcm-src.jar"/>
-	<classpathentry kind="lib" path="/TestActivity/libs/libGoogleAnalytics.jar"/>
+	<classpathentry exported="true" kind="lib" path="/TestActivity/libs/libGoogleAnalytics.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/gcm.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Zahid/Downloads/Compressed/adt-bundle-windows-x86_64-20140702/sdk/platforms/android-16/android.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="http://developer.android.com/reference/"/>
+		</attributes>
+		<accessrules>
+			<accessrule kind="nonaccessible" pattern="com/android/internal/**"/>
+		</accessrules>
+	</classpathentry>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
