--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry exported="true" kind="lib" path="/TestActivity/libs/libGoogleAnalytics.jar"/>
-	<classpathentry exported="true" kind="lib" path="libs/gcm.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Zahid/Downloads/Compressed/adt-bundle-windows-x86_64-20140702/sdk/platforms/android-16/android.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="http://developer.android.com/reference/"/>
@@ -15,5 +14,6 @@
 			<accessrule kind="nonaccessible" pattern="com/android/internal/**"/>
 		</accessrules>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/gcm-src.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
