--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -28,13 +28,12 @@
 
     <uses-permission android:name="com.CFP.messiah.permission.C2D_MESSAGE" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
-    
-<supports-screens 
-    android:smallScreens="true"
-    android:normalScreens="true"
-    android:largeScreens="true"
-    
-    />
+
+    <supports-screens
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true" />
+
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
@@ -53,56 +52,64 @@
 
         <activity
             android:name="com.CFP.messiah.MainActivity"
-            android:label="@string/app_name" 
+            android:label="@string/app_name"
             android:parentActivityName="com.CFP.messiah.MainActivity"
-            >
-            
+            android:screenOrientation="portrait" >
             <intent-filter>
 
                 <!-- <action android:name="android.intent.action.MAIN" /> -->
 
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+
             <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.CFP.messiah.MainActivity" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.CFP.messiah.MainActivity" />
         </activity>
- 
         <activity
             android:name="com.CFP.messiah.ImplementMaps"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.CFP.messiah.Settings"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.CFP.messiah.MessiahContacts"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
-         <activity
+        <activity
             android:name="com.CFP.messiah.AccidentWarning"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.CFP.messiah.SpeedDialActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.CFP.messiah.ContactView"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.CFP.messiah.MessiahRegistertion"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.CFP.messiah.Verification"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name="com.CFP.messiah.WelcomeScreen"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
