--- a/project.properties
+++ b/project.properties
@@ -13,5 +13,5 @@
 # Project target.
 target=android-19
 android.library.reference.1=..\\..\\Downloads\\Compressed\\adt-bundle-windows-x86_64-20140702\\sdk\\extras\\google\\google_play_services\\libproject\\google-play-services_lib
-android.library.reference.2=..\\appcompat_v7_4
+android.library.reference.2=../appcompat_v7_4
 android.library=false
